--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,7 @@ celerybeat.pid
 env/
 venv/
 ENV/
+newenv/
 env.bak/
 venv.bak/
 
@@ -127,3 +128,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#Special dirs
+media/
+static/
